# coreouto

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: agent.md  hooks.md  index.md  multi-agent.md  philosophy.md  presets.md  prompts.md  providers.md  quickstart.md  tools.md
examples/: 01_simple.py  02_tools.py  03_presets.py  04_hooks.py  05_multi_agent.py  06_custom_provider.py  07_provider_settings.py  08_force_finish.py  09_agent_delegation.py  10_custom_endpoints.py  12_history.py  13_inject.py  14_anthropic_reasoning.py  15_multimodal_tool_results.py  16_streaming_output.py  17_error_handling.py  18_openai_errors.py  19_anthropic_errors.py  20_google_errors.py  21_loop_history.py  22_history_summarization.py  23_loop_history_summarization.py  24_auto_summarize.py
src/coreouto/: __init__.py  _types.py  _version.py  agent.py  hooks.py  multi_agent.py  presets.py  settings.py  sync.py  tools.py
src/coreouto/contrib/: error_presets.py  hooks.py
src/coreouto/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_response.py
tests/: conftest.py  test_agent.py  test_contrib_hooks.py  test_error_handling.py  test_hooks.py  test_multi_agent.py  test_presets.py  test_providers_anthropic.py  test_providers_base.py  test_providers_google.py  test_providers_openai.py  test_providers_openai_response.py  test_providers_registry.py  test_public_api.py  test_retry.py  test_settings.py  test_sync.py  test_tools.py  test_types.py
