[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreouto"
version = "0.4.0"
description = "A minimal, extensible agent library for Python. Five philosophies: minimalism, extensibility, explicitness, fragmentation, conciseness."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "coreouto authors" },
]
keywords = ["agent", "llm", "ai", "tool-use", "provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
google = ["google-genai>=1.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "google-genai>=1.0",
]

[project.urls]
Homepage = "https://github.com/llaa33219/coreouto"
Documentation = "https://github.com/llaa33219/coreouto/tree/main/docs"
Repository = "https://github.com/llaa33219/coreouto"
Issues = "https://github.com/llaa33219/coreouto/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coreouto"]

[tool.hatch.build.targets.sdist]
include = [
    "src/coreouto",
    "tests",
    "docs",
    "examples",
    "README.md",
    "LICENSE",
    "AGENTS.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
